Fix initial position of discovery app in single process mash.

Instead of setting bounds on the aura::Window, set it on the Widget
(by way of browser's BrowserWindow)

Bug: 921114
Change-Id: I5aa853d3d990d87ece4a7b352c11509b7c543bea
Reviewed-on: https://chromium-review.googlesource.com/c/1407632
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622512}
Former-commit-id: 86a613b361ac74ca43cdd42f8961536cb757540a